// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Pokemon list snapshots testing 1`] = `
<div
  className="css-wcex5t"
  data-testid="pokemon-list"
>
  <a
    href="#/detail/ivysaur"
    id="ivysaur"
    onClick={[Function]}
    title="ivysaur"
  >
    <div
      className="css-1282ew1"
    >
      <div
        className="css-1yltisf"
      >
        <img
          alt="https://pokeapi.co/api/v2/pokemon/2/"
          className="css-12k99am"
          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/2.png"
        />
        <p
          className="text-gray-900 leading-none"
        >
          Ivysaur
        </p>
      </div>
    </div>
  </a>
  <a
    href="#/detail/venusaur"
    id="venusaur"
    onClick={[Function]}
    title="venusaur"
  >
    <div
      className="css-1282ew1"
    >
      <div
        className="css-1yltisf"
      >
        <img
          alt="https://pokeapi.co/api/v2/pokemon/3/"
          className="css-12k99am"
          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/3.png"
        />
        <p
          className="text-gray-900 leading-none"
        >
          Venusaur
        </p>
      </div>
    </div>
  </a>
  <a
    href="#/detail/charmander"
    id="charmander"
    onClick={[Function]}
    title="charmander"
  >
    <div
      className="css-1282ew1"
    >
      <div
        className="css-1yltisf"
      >
        <img
          alt="https://pokeapi.co/api/v2/pokemon/4/"
          className="css-12k99am"
          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/4.png"
        />
        <p
          className="text-gray-900 leading-none"
        >
          Charmander
        </p>
      </div>
    </div>
  </a>
  <a
    href="#/detail/charmeleon"
    id="charmeleon"
    onClick={[Function]}
    title="charmeleon"
  >
    <div
      className="css-1282ew1"
    >
      <div
        className="css-1yltisf"
      >
        <img
          alt="https://pokeapi.co/api/v2/pokemon/5/"
          className="css-12k99am"
          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/5.png"
        />
        <p
          className="text-gray-900 leading-none"
        >
          Charmeleon
        </p>
      </div>
    </div>
  </a>
  <a
    href="#/detail/charizard"
    id="charizard"
    onClick={[Function]}
    title="charizard"
  >
    <div
      className="css-1282ew1"
    >
      <div
        className="css-1yltisf"
      >
        <img
          alt="https://pokeapi.co/api/v2/pokemon/6/"
          className="css-12k99am"
          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
        />
        <p
          className="text-gray-900 leading-none"
        >
          Charizard
        </p>
      </div>
    </div>
  </a>
  <a
    href="#/detail/squirtle"
    id="squirtle"
    onClick={[Function]}
    title="squirtle"
  >
    <div
      className="css-1282ew1"
    >
      <div
        className="css-1yltisf"
      >
        <img
          alt="https://pokeapi.co/api/v2/pokemon/7/"
          className="css-12k99am"
          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png"
        />
        <p
          className="text-gray-900 leading-none"
        >
          Squirtle
        </p>
      </div>
    </div>
  </a>
  <a
    href="#/detail/wartortle"
    id="wartortle"
    onClick={[Function]}
    title="wartortle"
  >
    <div
      className="css-1282ew1"
    >
      <div
        className="css-1yltisf"
      >
        <img
          alt="https://pokeapi.co/api/v2/pokemon/8/"
          className="css-12k99am"
          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/8.png"
        />
        <p
          className="text-gray-900 leading-none"
        >
          Wartortle
        </p>
      </div>
    </div>
  </a>
  <a
    href="#/detail/blastoise"
    id="blastoise"
    onClick={[Function]}
    title="blastoise"
  >
    <div
      className="css-1282ew1"
    >
      <div
        className="css-1yltisf"
      >
        <img
          alt="https://pokeapi.co/api/v2/pokemon/9/"
          className="css-12k99am"
          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/9.png"
        />
        <p
          className="text-gray-900 leading-none"
        >
          Blastoise
        </p>
      </div>
    </div>
  </a>
  <a
    href="#/detail/caterpie"
    id="caterpie"
    onClick={[Function]}
    title="caterpie"
  >
    <div
      className="css-1282ew1"
    >
      <div
        className="css-1yltisf"
      >
        <img
          alt="https://pokeapi.co/api/v2/pokemon/10/"
          className="css-12k99am"
          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/10.png"
        />
        <p
          className="text-gray-900 leading-none"
        >
          Caterpie
        </p>
      </div>
    </div>
  </a>
  <a
    href="#/detail/metapod"
    id="metapod"
    onClick={[Function]}
    title="metapod"
  >
    <div
      className="css-1282ew1"
    >
      <div
        className="css-1yltisf"
      >
        <img
          alt="https://pokeapi.co/api/v2/pokemon/11/"
          className="css-12k99am"
          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/11.png"
        />
        <p
          className="text-gray-900 leading-none"
        >
          Metapod
        </p>
      </div>
    </div>
  </a>
  <a
    href="#/detail/butterfree"
    id="butterfree"
    onClick={[Function]}
    title="butterfree"
  >
    <div
      className="css-1282ew1"
    >
      <div
        className="css-1yltisf"
      >
        <img
          alt="https://pokeapi.co/api/v2/pokemon/12/"
          className="css-12k99am"
          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/12.png"
        />
        <p
          className="text-gray-900 leading-none"
        >
          Butterfree
        </p>
      </div>
    </div>
  </a>
</div>
`;

exports[`Test Pokemon list with Heading renders correctly on load 1`] = `
Array [
  <div
    className="css-1gwvebz"
  >
    <div>
      <a
        href="#/my-list"
        onClick={[Function]}
      >
        <button>
          <span
            id="pokemon-title"
          >
            My Pokemons (
            1
            )
          </span>
        </button>
      </a>
    </div>
  </div>,
  <div
    className="css-wcex5t"
    data-testid="pokemon-list"
  >
    <a
      href="#/detail/ivysaur"
      id="ivysaur"
      onClick={[Function]}
      title="ivysaur"
    >
      <div
        className="css-1282ew1"
      >
        <div
          className="css-1yltisf"
        >
          <img
            alt="https://pokeapi.co/api/v2/pokemon/2/"
            className="css-12k99am"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/2.png"
          />
          <p
            className="text-gray-900 leading-none"
          >
            Ivysaur
          </p>
        </div>
      </div>
    </a>
    <a
      href="#/detail/venusaur"
      id="venusaur"
      onClick={[Function]}
      title="venusaur"
    >
      <div
        className="css-1282ew1"
      >
        <div
          className="css-1yltisf"
        >
          <img
            alt="https://pokeapi.co/api/v2/pokemon/3/"
            className="css-12k99am"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/3.png"
          />
          <p
            className="text-gray-900 leading-none"
          >
            Venusaur
          </p>
        </div>
      </div>
    </a>
    <a
      href="#/detail/charmander"
      id="charmander"
      onClick={[Function]}
      title="charmander"
    >
      <div
        className="css-1282ew1"
      >
        <div
          className="css-1yltisf"
        >
          <img
            alt="https://pokeapi.co/api/v2/pokemon/4/"
            className="css-12k99am"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/4.png"
          />
          <p
            className="text-gray-900 leading-none"
          >
            Charmander
          </p>
        </div>
      </div>
    </a>
    <a
      href="#/detail/charmeleon"
      id="charmeleon"
      onClick={[Function]}
      title="charmeleon"
    >
      <div
        className="css-1282ew1"
      >
        <div
          className="css-1yltisf"
        >
          <img
            alt="https://pokeapi.co/api/v2/pokemon/5/"
            className="css-12k99am"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/5.png"
          />
          <p
            className="text-gray-900 leading-none"
          >
            Charmeleon
          </p>
        </div>
      </div>
    </a>
    <a
      href="#/detail/charizard"
      id="charizard"
      onClick={[Function]}
      title="charizard"
    >
      <div
        className="css-1282ew1"
      >
        <div
          className="css-1yltisf"
        >
          <img
            alt="https://pokeapi.co/api/v2/pokemon/6/"
            className="css-12k99am"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
          />
          <p
            className="text-gray-900 leading-none"
          >
            Charizard
          </p>
        </div>
      </div>
    </a>
    <a
      href="#/detail/squirtle"
      id="squirtle"
      onClick={[Function]}
      title="squirtle"
    >
      <div
        className="css-1282ew1"
      >
        <div
          className="css-1yltisf"
        >
          <img
            alt="https://pokeapi.co/api/v2/pokemon/7/"
            className="css-12k99am"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png"
          />
          <p
            className="text-gray-900 leading-none"
          >
            Squirtle
          </p>
        </div>
      </div>
    </a>
    <a
      href="#/detail/wartortle"
      id="wartortle"
      onClick={[Function]}
      title="wartortle"
    >
      <div
        className="css-1282ew1"
      >
        <div
          className="css-1yltisf"
        >
          <img
            alt="https://pokeapi.co/api/v2/pokemon/8/"
            className="css-12k99am"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/8.png"
          />
          <p
            className="text-gray-900 leading-none"
          >
            Wartortle
          </p>
        </div>
      </div>
    </a>
    <a
      href="#/detail/blastoise"
      id="blastoise"
      onClick={[Function]}
      title="blastoise"
    >
      <div
        className="css-1282ew1"
      >
        <div
          className="css-1yltisf"
        >
          <img
            alt="https://pokeapi.co/api/v2/pokemon/9/"
            className="css-12k99am"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/9.png"
          />
          <p
            className="text-gray-900 leading-none"
          >
            Blastoise
          </p>
        </div>
      </div>
    </a>
    <a
      href="#/detail/caterpie"
      id="caterpie"
      onClick={[Function]}
      title="caterpie"
    >
      <div
        className="css-1282ew1"
      >
        <div
          className="css-1yltisf"
        >
          <img
            alt="https://pokeapi.co/api/v2/pokemon/10/"
            className="css-12k99am"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/10.png"
          />
          <p
            className="text-gray-900 leading-none"
          >
            Caterpie
          </p>
        </div>
      </div>
    </a>
    <a
      href="#/detail/metapod"
      id="metapod"
      onClick={[Function]}
      title="metapod"
    >
      <div
        className="css-1282ew1"
      >
        <div
          className="css-1yltisf"
        >
          <img
            alt="https://pokeapi.co/api/v2/pokemon/11/"
            className="css-12k99am"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/11.png"
          />
          <p
            className="text-gray-900 leading-none"
          >
            Metapod
          </p>
        </div>
      </div>
    </a>
    <a
      href="#/detail/butterfree"
      id="butterfree"
      onClick={[Function]}
      title="butterfree"
    >
      <div
        className="css-1282ew1"
      >
        <div
          className="css-1yltisf"
        >
          <img
            alt="https://pokeapi.co/api/v2/pokemon/12/"
            className="css-12k99am"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/12.png"
          />
          <p
            className="text-gray-900 leading-none"
          >
            Butterfree
          </p>
        </div>
      </div>
    </a>
  </div>,
]
`;
